


** 0.0.x **

  - Fix the bug where it looks different in firefox than chrome
    - It's a bug in the font, they don't render fonts the same way
      OPTIONS:
      * Manually edit WOFF file
      * See if there's a close enough match font elsewhere
      * Use a generic font
      * Use images that the rails app renders before serving out the page (yuck)


** 0.0.1 **
  Early work...

  - Got javascript classes
  - Title screen
  - Battle screen
  - Some animations
  
  