@@ -1,1 +1,1 @@
-*{  padding:0;  margin:0;  //font-family:'FinalFantasyVISNESaRegular';      cursor:default;}a {   outline: 0;  -webkit-tap-highlight-color: rgba(0,0,0,0);} body{  background:black;  font-family:'FinalFantasyVISNESaRegular';    -webkit-font-smoothing: antialiased;  -moz-font-smoothing: antialiased;  text-rendering: geometricPrecision;  text-shadow: 2px 2px #000000;  font-size: 50px;  color:white;    -webkit-touch-callout: none;  -webkit-user-select: none;  -khtml-user-select: none;  -moz-user-select: none;  -ms-user-select: none;  user-select: none;}div#content{	position:relative;	margin: 0 auto;	width:1000px;}canvas {  position:absolute;	top:5px;	left:0;	width: 1000px;	height: 630px;	-webkit-tap-highlight-color: rgba(0,0,0,0);	}canvas#title_screen {	border: 1px solid blue; }canvas#battle_screen {	border: 1px solid green; 	display:none;	height:430px;}canvas#battle_background{  background:red;  border: 1px solid green;   height:430px;  display:none;}div#battle_menu{  position:absolute;  display:none;  top:431px;  left:0px;  height: 200px;  width: 1002px;  margin:0;  padding:0;  /*background:#0000ff;*/}div#battle_menu *{  background:#0000ff;}@-webkit-keyframes fontbulger {  0%, 100% {    font-size: 60px;  }  50% {    font-size: 70px;  }}@-moz-keyframes fontbulger {  0%, 100% {    font-size: 60px;  }  50% {    font-size: 70px;  }}.activated_picking{  -webkit-animation: fontbulger 1s infinite;  -moz-animation:    fontbulger 1s infinite;  -ms-animation:     fontbulger 1s infinite;  -o-animation:      fontbulger 1s infinite;    font-family:'FinalFantasyVISNESaRegular';  text-shadow: 2px 2px #000000;  font-size: 50px;}.action_buttons{  background:purple;  width:150px;  height:60px;  position:absolute;  border-radius:20px;    text-align:center;  padding-top:15px;  border:solid white;}a.fight_button{  }a.fight_button:active{  color:red;}div#fight_button{  display:none;  bottom:175px;  left:20px;  background:purple;  z-index:0;}.menu_border{  border-style:ridge;  border-color:white;  border-width:10px;  border-radius:10px;}div#battle_menu #enemies{  position:relative;  z-index:0;	height: 141px;  width: 240px;  float:left;    padding:20px;    border-style:ridge;  border-color:white;  border-width:10px;  border-radius:10px;}div#battle_menu li{  text-decoration:none;  list-style-type: none;  padding-bottom:10px;  padding-left:10px;  font-size:60px;  height: 23px;}div#battle_menu #party{  height: 181px;  width: 682px;  float:left;    margin-right:0px;}#character_list li div{  float:left;  padding: 10px 0;}#character_list .name{  margin-left:30px;  width: 160px;}#character_list .current_hp{  margin-left:40px;  width:90px;  text-align:right;}#character_list .max_hp{  margin-left:0px;  width:90px;  text-align:right;}#character_list .current_mp{/*  visibility:hidden;*/  width:70px;  margin-left:20px;  color:purple;}#character_list .time{  position:relative;  overflow:hidden;  padding:0;  margin-top:11px;  margin-left:30px;  width:100px;  height:10px;      border:solid;  border-radius:20px;  border-color:grey;}#character_list .time .fill{  position:absolute;  width:20px;  background:white;  overflow:hidden;}#character_list .time .wait_bar{  position:absolute;  top:0;  left:0;  width:100px;  height:10px;  padding:0;  margin:0;}#worldmap_screen{  display:none;}.clear{	clear:both;}li.mob {  width: 230px;  height: 23px;}
+*{  padding:0;  margin:0;  //font-family:'FinalFantasyVISNESaRegular';      cursor:default;}a {   outline: 0;  -webkit-tap-highlight-color: rgba(0,0,0,0);} body{  background:black;  //font-family:'FinalFantasyVISNESaRegular';  font-family:'Final Fantasy Script Collection - Final Fantasy VI SNESa';    //-webkit-font-smoothing: antialiased;  //-moz-font-smoothing: antialiased;  //text-rendering: geometricPrecision;  text-shadow: 2px 2px #000000;  //font-size: 50px;  color:white;    -webkit-touch-callout: none;  -webkit-user-select: none;  -khtml-user-select: none;  -moz-user-select: none;  -ms-user-select: none;  user-select: none;}div#content{	position:relative;	margin: 0 auto;	width:1000px;}canvas {  position:absolute;	top:5px;	left:0;	width: 1000px;	height: 630px;	-webkit-tap-highlight-color: rgba(0,0,0,0);	}canvas#title_screen {	border: 1px solid blue; }canvas#battle_screen {	border: 1px solid green; 	display:none;	height:430px;}canvas#battle_background{  background:red;  border: 1px solid green;   height:430px;  display:none;}div#battle_menu{  position:absolute;  display:none;  top:431px;  left:0px;  height: 200px;  width: 1002px;  margin:0;  padding:0;  /*background:#0000ff;*/}div#battle_menu *{  background:#0000ff;}@-webkit-keyframes fontbulger {  0%, 100% {    font-size: 60px;  }  50% {    font-size: 70px;  }}@-moz-keyframes fontbulger {  0%, 100% {    font-size: 60px;  }  50% {    font-size: 70px;  }}.activated_picking{  -webkit-animation: fontbulger 1s infinite;  -moz-animation:    fontbulger 1s infinite;  -ms-animation:     fontbulger 1s infinite;  -o-animation:      fontbulger 1s infinite;    font-family:'FinalFantasyVISNESaRegular';  text-shadow: 2px 2px #000000;  font-size: 50px;}.action_buttons{  background:purple;  width:150px;  height:60px;  position:absolute;  border-radius:20px;    text-align:center;  padding-top:15px;  border:solid white;}a.fight_button{  }a.fight_button:active{  color:red;}div#fight_button{  display:none;  bottom:175px;  left:20px;  background:purple;  z-index:0;}.menu_border{  border-style:ridge;  border-color:white;  border-width:10px;  border-radius:10px;}div#battle_menu #enemies{  position:relative;  z-index:0;	height: 141px;  width: 240px;  float:left;    padding:20px;    border-style:ridge;  border-color:white;  border-width:10px;  border-radius:10px;}div#battle_menu li{  text-decoration:none;  list-style-type: none;  padding-bottom:10px;  padding-left:10px;  //font-size:60px;  font-size: 2em;  //height: 23px;}div#battle_menu #party{  height: 181px;  width: 682px;  float:left;    margin-right:0px;}#character_list li div{  float:left;  padding: 10px 0;}#character_list .name{  margin-left:30px;  width: 160px;}#character_list .current_hp{  margin-left:40px;  width:90px;  text-align:right;}#character_list .max_hp{  margin-left:0px;  width:90px;  text-align:right;}#character_list .current_mp{/*  visibility:hidden;*/  width:70px;  margin-left:20px;  color:purple;}#character_list .time{  position:relative;  overflow:hidden;  padding:0;  margin-top:11px;  margin-left:30px;  width:100px;  height:10px;      border:solid;  border-radius:20px;  border-color:grey;}#character_list .time .fill{  position:absolute;  width:20px;  background:white;  overflow:hidden;}#character_list .time .wait_bar{  position:absolute;  top:0;  left:0;  width:100px;  height:10px;  padding:0;  margin:0;}#worldmap_screen{  display:none;}.clear{	clear:both;}li.mob {  width: 230px;  //height: 23px;}
