@@ -8,7 +8,10 @@
     <link rel="shortcut icon" href="/favicon2.ico" type="image/x-icon" />
     
 		<!-- 	Webfonts	 -->
+		<!--
 		<link rel="stylesheet" href="/fonts/ffvi/stylesheet.css" type="text/css" charset="utf-8" />
+		-->
+		<style media="screen" type="text/css">/*<![CDATA[*/@import '/fonts/take_2/stylesheet.css';/*]]>*/</style>
 		<%= stylesheet_link_tag "m" %>
 
 
