@@ -5,7 +5,7 @@
 @font-face {
     font-family: 'FinalFantasyVISNESaRegular';
 
-    src: url('final_fantasy_vi_snesa-webfont.ttf') format('truetype');
+    src: url('FinalFantasyVISNESa_fixk.woff') format('truetype');
          
     font-weight: normal;
     font-style: normal;
