@@ -1,0 +1,22 @@
+﻿body{margin:0px;padding:0px;font-family:Verdana,Arial;font-size:12px}
+#wrapper{width:1000px;margin-left:auto;margin-right:auto;border:1px solid #eeeeee;border-top:0}
+#title{float:left;width:680px;margin:20px 0 20px 20px;font-size:60px;white-space:nowrap;overflow:hidden}
+#logo{float:right;margin:25px 20px 20px 0}
+#logo img{border:0}
+#menu,#footer{background:#eeeeee}
+#menu ul{padding:0;margin:0}
+#menu li{list-style-type:none}
+#menu li a{padding:5px 20px 5px 20px;float:left;color:black;text-decoration:none;font-weight:bold}
+#menu li a:hover{background:#d7d7d7}
+#menu li.selected a{background:#002957;color:white}
+#content{padding:20px}
+#glyphs{float:left;margin-bottom:-20px !important}
+#glyphs .g{width:89px;float:left;text-align:center;padding:0 3px 0 3px;border-right:1px solid #eeeeee;white-space:nowrap;overflow:hidden;margin-bottom:20px;min-height:100px}
+.noborder{border:0 !important}
+#glyphs p{font-size:60px;padding:0;margin:10px 0 0 0}
+#footer {padding:5px 20px 5px 20px}
+#footer a{color:black}
+#copyright{float:left;white-space:nowrap;overflow:hidden;width:730px}
+#generated{float:right}
+#support{width:1000px;margin-left:auto;margin-right:auto;padding:5px 0 20px 40px;color:#9f9f9f}
+.clr{clear:both}
