@@ -1,0 +1,52 @@
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"> 
+
+<html xmlns="http://www.w3.org/1999/xhtml"> 
+
+  <head> 
+
+    <title>Final Fantasy Script Collection - Final Fantasy VI SNESa @font-face kit sample</title> 
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    
+    <style media="screen" type="text/css">/*<![CDATA[*/@import 'stylesheet.css';/*]]>*/</style>
+    <style media="screen" type="text/css">/*<![CDATA[*/@import 'demo-files/demo.css';/*]]>*/</style>
+    <style type="text/css">#title,#glyphs p{font-family:"Final Fantasy Script Collection - Final Fantasy VI SNESa"}</style>
+
+ </head> 
+ 
+<body> 
+
+	<div id="wrapper">
+		<div id="title">
+			Final Fantasy Script Collection - Final Fantasy VI SNESa		</div>
+		<div id="logo">
+			<a href="http://www.fonts2u.com" target="_blank"><img src="demo-files/fonts2u_logo.gif" width="250" height="69" alt="Fonts2u.com logo" /></a>
+		</div>
+		<div class="clr"></div>
+
+		<div id="menu">
+			<ul>
+				<li class="selected"><a href="#glyphs">Glyph Chart</a></li>
+			<ul>
+			<div class="clr"></div>
+		</div>
+
+		<div id="content">
+			
+			<div id="glyphs">
+				﻿<div class="g">&amp;#32;<p> </p></div>﻿<div class="g">&amp;#33;<p>!</p></div>﻿<div class="g">&amp;#34;<p>"</p></div>﻿<div class="g">&amp;#39;<p>'</p></div>﻿<div class="g">&amp;#44;<p>,</p></div>﻿<div class="g">&amp;#45;<p>-</p></div>﻿<div class="g">&amp;#46;<p>.</p></div>﻿<div class="g">&amp;#47;<p>/</p></div>﻿<div class="g">&amp;#48;<p>0</p></div>﻿<div class="g noborder">&amp;#49;<p>1</p></div><div class="clr"></div>﻿<div class="g">&amp;#50;<p>2</p></div>﻿<div class="g">&amp;#51;<p>3</p></div>﻿<div class="g">&amp;#52;<p>4</p></div>﻿<div class="g">&amp;#53;<p>5</p></div>﻿<div class="g">&amp;#54;<p>6</p></div>﻿<div class="g">&amp;#55;<p>7</p></div>﻿<div class="g">&amp;#56;<p>8</p></div>﻿<div class="g">&amp;#57;<p>9</p></div>﻿<div class="g">&amp;#58;<p>:</p></div>﻿<div class="g noborder">&amp;#63;<p>?</p></div><div class="clr"></div>﻿<div class="g">&amp;#65;<p>A</p></div>﻿<div class="g">&amp;#66;<p>B</p></div>﻿<div class="g">&amp;#67;<p>C</p></div>﻿<div class="g">&amp;#68;<p>D</p></div>﻿<div class="g">&amp;#69;<p>E</p></div>﻿<div class="g">&amp;#70;<p>F</p></div>﻿<div class="g">&amp;#71;<p>G</p></div>﻿<div class="g">&amp;#72;<p>H</p></div>﻿<div class="g">&amp;#73;<p>I</p></div>﻿<div class="g noborder">&amp;#74;<p>J</p></div><div class="clr"></div>﻿<div class="g">&amp;#75;<p>K</p></div>﻿<div class="g">&amp;#76;<p>L</p></div>﻿<div class="g">&amp;#77;<p>M</p></div>﻿<div class="g">&amp;#78;<p>N</p></div>﻿<div class="g">&amp;#79;<p>O</p></div>﻿<div class="g">&amp;#80;<p>P</p></div>﻿<div class="g">&amp;#81;<p>Q</p></div>﻿<div class="g">&amp;#82;<p>R</p></div>﻿<div class="g">&amp;#83;<p>S</p></div>﻿<div class="g noborder">&amp;#84;<p>T</p></div><div class="clr"></div>﻿<div class="g">&amp;#85;<p>U</p></div>﻿<div class="g">&amp;#86;<p>V</p></div>﻿<div class="g">&amp;#87;<p>W</p></div>﻿<div class="g">&amp;#88;<p>X</p></div>﻿<div class="g">&amp;#89;<p>Y</p></div>﻿<div class="g">&amp;#90;<p>Z</p></div>﻿<div class="g">&amp;#97;<p>a</p></div>﻿<div class="g">&amp;#98;<p>b</p></div>﻿<div class="g">&amp;#99;<p>c</p></div>﻿<div class="g noborder">&amp;#100;<p>d</p></div><div class="clr"></div>﻿<div class="g">&amp;#101;<p>e</p></div>﻿<div class="g">&amp;#102;<p>f</p></div>﻿<div class="g">&amp;#103;<p>g</p></div>﻿<div class="g">&amp;#104;<p>h</p></div>﻿<div class="g">&amp;#105;<p>i</p></div>﻿<div class="g">&amp;#106;<p>j</p></div>﻿<div class="g">&amp;#107;<p>k</p></div>﻿<div class="g">&amp;#108;<p>l</p></div>﻿<div class="g">&amp;#109;<p>m</p></div>﻿<div class="g noborder">&amp;#110;<p>n</p></div><div class="clr"></div>﻿<div class="g">&amp;#111;<p>o</p></div>﻿<div class="g">&amp;#112;<p>p</p></div>﻿<div class="g">&amp;#113;<p>q</p></div>﻿<div class="g">&amp;#114;<p>r</p></div>﻿<div class="g">&amp;#115;<p>s</p></div>﻿<div class="g">&amp;#116;<p>t</p></div>﻿<div class="g">&amp;#117;<p>u</p></div>﻿<div class="g">&amp;#118;<p>v</p></div>﻿<div class="g">&amp;#119;<p>w</p></div>﻿<div class="g noborder">&amp;#120;<p>x</p></div><div class="clr"></div>﻿<div class="g">&amp;#121;<p>y</p></div>﻿<div class="g">&amp;#122;<p>z</p></div>﻿<div class="g">&amp;#160;<p> </p></div>			</div>
+			
+			<div class="clr"></div>
+
+		</div>
+
+		<div id="footer">
+			<div id="copyright"><strong>Final Fantasy Script Collection - Final Fantasy VI SNESa</strong> | <strong>License:</strong> Personal</div>
+			<div id="generated"><strong>@font-face kit</strong> by <a href="http://www.fonts2u.com" target="_blank">Fonts2u.com</a></div>
+			<div class="clr"></div>
+		</div>
+	</div>
+	<div id="support">Generated @font-face kit is compatible with western languages.</div>
+
+</body> 
+
+</html> 
