@@ -1,0 +1,1 @@
+﻿/* @font-face kit by Fonts2u (http://www.fonts2u.com) */ @font-face {font-family:"Final Fantasy Script Collection - Final Fantasy VI SNESa";src:url("Final_Fantasy_VI_SNESa.eot?") format("eot"),url("Final_Fantasy_VI_SNESa.woff") format("woff"),url("Final_Fantasy_VI_SNESa.ttf") format("truetype"),url("Final_Fantasy_VI_SNESa.svg#FinalFantasyVISNESa") format("svg");font-weight:normal;font-style:normal;}
